[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/sprites/items/Item__00.png" type="Texture" id=1]
[ext_resource path="res://src/ui/ListItem.gd" type="Script" id=2]

[node name="ListItem" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 1280.0
margin_bottom = 38.0
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShortcutMargin" type="MarginContainer" parent="VBox/HBox"]
margin_right = 21.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_vertical = 0
custom_constants/margin_right = 3
custom_constants/margin_top = 8
custom_constants/margin_left = 3
custom_constants/margin_bottom = 8

[node name="Shortcut" type="Label" parent="VBox/HBox/ShortcutMargin"]
margin_left = 3.0
margin_top = 8.0
margin_right = 18.0
margin_bottom = 22.0
size_flags_vertical = 0
text = "[a]"

[node name="ImageMargin" type="MarginContainer" parent="VBox/HBox"]
margin_left = 35.0
margin_right = 73.0
margin_bottom = 38.0
mouse_filter = 1
size_flags_vertical = 0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="Image" type="TextureRect" parent="VBox/HBox/ImageMargin"]
margin_left = 3.0
margin_top = 3.0
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 0
size_flags_stretch_ratio = 10.0
texture = ExtResource( 1 )
stretch_mode = 5

[node name="NameMargin" type="MarginContainer" parent="VBox/HBox"]
margin_left = 87.0
margin_right = 1280.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/margin_right = 3
custom_constants/margin_top = 8
custom_constants/margin_left = 3
custom_constants/margin_bottom = 8

[node name="Name" type="Label" parent="VBox/HBox/NameMargin"]
margin_left = 3.0
margin_top = 8.0
margin_right = 1190.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "why why why why why"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
